tests/negative/gold/export-show-test.gold
tests/negative/export-show-test.toit:5:28: error: Unresolved show 'foo'
import .export-show-a show foo
                           ^~~
tests/negative/export-show-test.toit:6:8: error: Unresolved export 'foo'
export foo
       ^~~
Compilation failed
